WIP cards, fixed spacing

--- a/src/scss/_elements.scss
+++ b/src/scss/_elements.scss
@@ -11,6 +11,7 @@ h3 {
 
 h2 {
     text-transform: uppercase;
+    line-height: 1;
 }
 
 ////////////////////
