--- a/src/scss/_generic.scss
+++ b/src/scss/_generic.scss
@@ -380,6 +380,6 @@ main {
 
 .grid-3 {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
     column-gap: $spacing-md;
 }
