--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -83,9 +83,9 @@ $color-black: #000000;
 ////////////////////
 // SPACING
 ////////////////////
-$spacing-unit: 1rem;
-$spacing-xs: $spacing-unit / 2;
-$spacing-sm: $spacing-unit;
-$spacing-md: $spacing-unit * 2;
-$spacing-lg: $spacing-unit * 3;
-$spacing-xl: $spacing-unit * 4;
+$spacing-unit: 0.5rem;
+$spacing-xs: $spacing-unit;
+$spacing-sm: $spacing-unit * 2;
+$spacing-md: $spacing-unit * 3;
+$spacing-lg: $spacing-unit * 4;
+$spacing-xl: $spacing-unit * 5;
