--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -1,6 +1,6 @@
 .btn {
     display: inline-block;
-    padding: 0.2rem 0.5rem;
+    padding: 0.4rem 0.6rem;
     border-radius: 4px;
     text-decoration: none;
     text-transform: uppercase;
