--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -1,5 +1,6 @@
 .card {
-    padding: $spacing-sm $spacing-sm;
+    margin-top: $spacing-sm;
+    padding: $spacing-sm $spacing-md;
     text-align: center;
     border-radius: 4px;
     border: 1px solid $color-light-grey;
